--- a/DoAnMonHoc/Views/Home/Index.cshtml
+++ b/DoAnMonHoc/Views/Home/Index.cshtml
@@ -97,8 +97,8 @@
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">Category</p>
-                                            <h3 class="product-name"><a href="#">@item.Name</a></h3>
-                                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+                                            <h3 class="product-name"><a asp-action="Detail" asp-controller="Product" >@item.Name</a></h3>
+                                            <h4 class="product-price">@item.Price <del class="product-old-price">@item.Price</del></h4>
                                             <div class="product-rating">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
