--- a/DoAnMonHoc/Views/Shared/_Layout.cshtml
+++ b/DoAnMonHoc/Views/Shared/_Layout.cshtml
@@ -35,13 +35,13 @@
         <div id="top-header">
             <div class="container">
                 <ul class="header-links pull-left">
-                    <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i>0123456789</a></li>
                     <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
                     <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
                 </ul>
                 <ul class="header-links pull-right">
-                    <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                    <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                    <li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
+                    <li><a href="#"><i class="fa fa-user-o"></i> Tài khoản</a></li>
                 </ul>
             </div>
         </div>
@@ -66,12 +66,15 @@
                         <div class="header-search">
                             <form>
                                 <select class="input-select">
-                                    <option value="0">All Categories</option>
-                                    <option value="1">Category 01</option>
-                                    <option value="1">Category 02</option>
+                                    <option value="0">Tất cả thể loại</option>
+                                    
+                                    <option value="1">Name</option>
+                                     
+
+
                                 </select>
                                 <input class="input" placeholder="Search here">
-                                <button class="search-btn">Search</button>
+                                <button class="search-btn">Tìm kím</button>
                             </form>
                         </div>
                     </div>
@@ -157,19 +160,18 @@
             <div id="responsive-nav">
                 <!-- NAV -->
                 <ul class="main-nav nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Hot Deals</a></li>
+                    <li class="nav-item btn-outline-light">
+                        <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">TRANG CHỦ</a>
+                    </li>
                     @foreach (Category item in ViewBag.menu)
                     {
                         <li><a href="/@Xulylink.ToUrlAlias(item.Name)-@item.Id">@item.Name</a></li>
 
                     }
                     <li class="nav-item btn-outline-light">
-                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">THE LOAI</a>
+                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">QUẢN TRỊ</a>
                     </li>
-                    <li class="nav-item btn-outline-light">
-                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">SAN PHAM</a>
-                    </li>
+
 
                     <li class="nav-item">
                 </ul>
